--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,18 @@ code {
 .prose h5,
 .prose h6,
 .prose p {
-  margin-bottom: 0;
-  margin-top: 0;
+  /* margin-bottom: 0; */
+  /* margin-top: 0; */
+  white-space: pre-line;
+}
+
+.prose p {
+  white-space: pre-line;
+}
+
+.prose table {
+  text-align: center;
+  width: auto;
 }
 
 .prose pre {
